force-app/main/default/objects/movedata__ExtensionSetting__c/movedata__ExtensionSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MoveData Extension Settings</label>
</CustomObject>