force-app/main/default/objects/movedata__ExtensionSetting__c/fields/movedata__Key__c.field-meta.xml
<CustomField>
    <fullName>movedata__Key__c</fullName>
    <label>Key</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>