force-app/main/default/objects/movedata__ExtensionSetting__c/fields/movedata__Type__c.field-meta.xml
<CustomField>
    <fullName>movedata__Type__c</fullName>
    <label>Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>