force-app/main/default/objects/movedata__ExtensionSetting__c/fields/movedata__Value__c.field-meta.xml
<CustomField>
    <fullName>movedata__Value__c</fullName>
    <label>Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>